Created 'MessageSender' class for broker connection and event transmission to a topic.